# deltamcp

./: README.md  claude_config.json  hello.py  pyproject.toml  test_config.json
config/: tables.json
src/: delta_lake.py  server.py  setup_tables.py
src/data/deltalake/customers/: 0-70d161c2-76ea-479a-995e-61b8ec529558-0.parquet  1-644876a6-50d1-47ad-9f9d-bbf2922a8d85-0.parquet  2-2f0627e8-2014-4a00-925f-00eab5d468c7-0.parquet
src/data/deltalake/inventory/: 0-7c80f908-3cb3-4b06-adcd-2f30a4cc066b-0.parquet  1-21adae51-4ea9-4f54-a293-f74fa6c90810-0.parquet  2-79490c13-604e-4719-8e54-10889d85a479-0.parquet
src/data/deltalake/orders/: 0-23116144-ab8e-4cc8-a557-ea4e90baf235-0.parquet  1-13775662-f63a-4b34-a81e-198ba1f85fa9-0.parquet  2-2357418b-e41e-4bae-b68c-e111307e90de-0.parquet
src/data/deltalake/product/: 0-b554fb56-11fa-421d-b5a2-7b8e7389c1ce-0.parquet
src/data/deltalake/sales_metrics/: 0-e9a510c8-fb89-47ee-820f-44549bc6f785-0.parquet  1-ffef42a4-6110-4a09-9bd9-2f8cbe22ed36-0.parquet  2-e13c52f6-98e3-4c3a-a921-08586084ce80-0.parquet
tests/: test_mcp_tools.py
